GH-14: [feat] "changes made to word stats method"